Fix project description not aligning with photos

--- a/src/styles/project-template.scss
+++ b/src/styles/project-template.scss
@@ -66,6 +66,7 @@
         align-items: center;
         .project-info {
             display: flex;
+            max-width: 1100px;
             height: 70%;
             justify-content: space-around;
             padding-top: 5rem;
@@ -117,6 +118,7 @@
                 
             }
             .description-section {
+                margin-left: 30px;
                 width: 50%;
                 @include mobile {
                     width: 100%;
